# turtlebot2i

./: 99-interbotix-turtlebot.rules  BASHRC CONFIG  INSTALLATION.md  LICENSE  README.md  ROS COMMANDS
phantomx_pincher_arm/: LICENSE  README.md
phantomx_pincher_arm/phantomx_pincher_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
phantomx_pincher_arm/phantomx_pincher_arm_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
phantomx_pincher_arm/phantomx_pincher_arm_bringup/config/: phantomx_pincher_arm.yaml  phantomx_pincher_gripper.yaml
phantomx_pincher_arm/phantomx_pincher_arm_bringup/launch/: arm.launch
phantomx_pincher_arm/phantomx_pincher_arm_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
phantomx_pincher_arm/phantomx_pincher_arm_description/launch/: phantomx_pincher.launch
phantomx_pincher_arm/phantomx_pincher_arm_description/meshes/: F2Bracket.stl  PincherBase.stl  PincherBicep.stl  PincherFinger.stl  PincherForeArm.stl  PincherWristGripper.stl
phantomx_pincher_arm/phantomx_pincher_arm_description/robots/: phantomx_pincher_arm.urdf.xacro
phantomx_pincher_arm/phantomx_pincher_arm_description/urdf/: arm_hardware.xacro  phantomx_pincher_arm.urdf.xacro  phantomx_pincher_arm.xacro  phantomx_pincher_gripper.xacro  pincher_arm.urdf
phantomx_pincher_arm/phantomx_pincher_arm_ikfast_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  phantomx_pincher_arm_moveit_ikfast_plugin_description.xml
phantomx_pincher_arm/phantomx_pincher_arm_ikfast_plugin/src/: phantomx_pincher_arm_ikfast_moveit_plugin.cpp  phantomx_pincher_arm_ikfast_solver.cpp  phantomx_pincher_arm_ikfast_solver.tbarm.cpp
ros_astra_camera/: CMakeLists.txt  README
ros_astra_camera/scripts/: install_addition_package
rqt_perspectives/: NewTest.perspective
turtlebot2i/turtlebot2i_description/: package.xml
turtlebot2i/turtlebot2i_description/meshes/stacks/interbotix/: 251mm_Spacer.stl  38mm_HexStandoff_MF.stl  51mm_HexStandoff_FF.stl  81mm_Spacer.stl  TurtleBot2i_MiddlePlate.stl  TurtleBot2i_UtilityPlate.stl
turtlebot2i/turtlebot2i_description/robots/: kobuki_interbotix_astra.urdf.xacro  kobuki_interbotix_zr300.urdf.xacro
turtlebot2i/turtlebot2i_description/urdf/: turtlebot_library.urdf.xacro
turtlebot2i/turtlebot2i_description/urdf/sensors/: astra.urdf.xacro  zr300.urdf.xacro
turtlebot2i_apps/turtlebot2i_arm_director/: CMakeLists.txt
turtlebot2i_apps/turtlebot2i_arm_director/launch/: demo.launch  named_pose_director.launch
turtlebot2i_apps/turtlebot2i_arm_director/src/: named_pose_director.cpp
turtlebot2i_apps/turtlebot2i_marker_manipulation/: CMakeLists.txt
turtlebot2i_apps/turtlebot2i_marker_manipulation/demo/: marker_manipulation_demo.cpp  marker_manipulation_demo.launch
turtlebot2i_apps/turtlebot2i_marker_manipulation/launch/: marker_demo.launch  marker_manipulation.launch
turtlebot2i_apps/turtlebot2i_marker_manipulation/msg/: BlockPoseArray.msg
turtlebot2i_apps/turtlebot2i_marker_manipulation/src/: pick_and_draw_action_server.cpp
turtlebot2i_apps/turtlebot2i_zoning_demo/: CMakeLists.txt  package.xml
turtlebot2i_apps/turtlebot2i_zoning_demo/launch/: find_object_3d.launch  zone_destination_node.launch  zone_detection_node.launch
turtlebot2i_apps/turtlebot2i_zoning_demo/src/: zone_detection_node.cpp
turtlebot2i_apps/turtlebot_arm_block_manipulation/: CMakeLists.txt
turtlebot2i_apps/turtlebot_arm_block_manipulation/action/: BlockDetection.action
turtlebot2i_apps/turtlebot_arm_block_manipulation/demo/: block_manipulation_demo.cpp  block_manipulation_demo.launch  block_manipulation_demo.rviz  block_manipulation_moveit.launch
turtlebot2i_apps/turtlebot_arm_block_manipulation/launch/: block_sorting_demo.launch
turtlebot2i_apps/turtlebot_arm_block_manipulation/msg/: BlockPoseArray.msg
turtlebot2i_apps/turtlebot_arm_block_manipulation/src/: block_detection_action_server.cpp  interactive_manipulation_action_server.cpp  pick_and_place_action_server.cpp
turtlebot2i_apps/turtlebot_arm_block_manipulation/test/: block_manipulation.cpp
turtlebot2i_apps/turtlebot_arm_marker_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot2i_apps/turtlebot_arm_marker_manipulation/action/: ToolDetection.action
turtlebot2i_apps/turtlebot_arm_marker_manipulation/demo/: marker_manipulation_demo.launch
turtlebot2i_apps/turtlebot_arm_marker_manipulation/launch/: marker_manipulation.launch
turtlebot2i_apps/turtlebot_arm_marker_manipulation/msg/: BlockPoseArray.msg
turtlebot2i_apps/turtlebot_arm_marker_manipulation/src/: tool_detection_action_server.cpp
turtlebot2i_apps/turtlebot_arm_pose_director/: CMakeLists.txt  package.xml
turtlebot2i_apps/turtlebot_arm_pose_director/launch/: demo.launch  named_pose_director.launch
turtlebot2i_apps/turtlebot_arm_pose_director/src/: named_pose_director.cpp
turtlebot2i_bringup/: package.xml
turtlebot2i_bringup/launch/: 3dsensor.launch  description.launch  dual_3dsensor.launch  interbotix_3dsensor.launch  interbotix_rtabmap.launch  minimal.launch  realsense_nodelet.launch.xml  rtabmap.launch  rviz.launch  turtlebot2i_basic.launch  turtlebot2i_demo1.launch  turtlebot2i_mapping.launch  turtlebot2i_webtools.launch
turtlebot2i_bringup/launch/includes/3dsensor/: astra.launch.xml  multi_astra.launch.xml  sr300.launch.xml  zr300_sr300.launch.xml
turtlebot2i_bringup/launch/includes/kobuki/: mobile_base.launch.xml
turtlebot2i_bringup/launch/tests/: rplidar.launch  rplidar_robot.launch  test_zr300.launch  test_zr300_alternate.launch
turtlebot2i_bringup/param/: interbotix_dwa_planner.yaml
turtlebot2i_bringup/rviz/: remote_view.rviz  turtlebot2i.rviz  turtlebot2i_basic.rviz
turtlebot2i_control/: CMakeLists.txt  package.xml
turtlebot2i_description/: CMakeLists.txt
turtlebot2i_gazebo/: package.xml
turtlebot2i_misc/: 99-example-turtlebot.rules  99-turtlebot2i.rules  BASHRC CONFIG  IKFast Notes  New dependencies  OpenUPS_settings.ini  ROS COMMANDS  ros-kinetic-realsense-camera  ros-kinetic-realsense-camera_99_all.deb  sr300_alignment_tool.stl  turtlebot2i_install.sh  turtlebot2i_remote_install.sh  (+2 more)
(+257 files in other folders)
