<?xml version="1.0"?>
<package>
  <name>turtlebot2i_bringup</name>
  <version>0.1.0</version>
  <description>The turtlebot2i_bringup package</description>

  <maintainer email="renee@interbotix.com">Renee Love</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
