<?xml version="1.0"?>
<package>
  <name>phantomx_pincher_arm</name>
  <version>0.1.0</version>
  <description>The phantomx_pincher_arm package</description>
	<maintainer email="renee@interbotix.com">Renee Love</maintainer>

  <license>BSD</license>

  

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>phantomx_pincher_arm_description</run_depend>
  <run_depend>phantomx_pincher_arm_bringup</run_depend>
  <run_depend>phantomx_pincher_arm_moveit_config</run_depend>
  <run_depend>phantomx_pincher_arm_ikfast_plugin</run_depend>
  <run_depend>phantomx_pincher_arm_block_manipulation</run_depend>

  <export><metapackage/></export>
</package>
