<?xml version="1.0"?>
<package>
  <name>phantomx_pincher_arm_bringup</name>
  <version>0.1.0</version>
  <description>The phantomx_pincher_arm_controller package</description>
<maintainer email="renee@interbotix.com">Renee Love</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>arbotix_python</build_depend>
  <run_depend>arbotix_python</run_depend> 
  <run_depend>rospy</run_depend> 

  <export></export>
</package>
