<?xml version="1.0"?>
<package>
  <name>phantomx_pincher_arm_description</name>
  <version>0.1.0</version>
  <description>The phantomx_pincher_arm_description package</description>

<maintainer email="renee@interbotix.com">Renee Love</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
